# 224n-discover-oss

./: README.md  pyproject.toml
ttt_discover/opentinker_backend/: clients.py  data_types.py
ttt_discover/rl/: data_processing.py  train.py  types.py
ttt_discover/tinker_utils/: completers.py  dataset_builder.py  misc_utils.py  renderers.py
