[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttt-discover"
version = "0.1.0"
description = "Learning to Discover at Test Time - RL at test time for LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mert Yuksekgonul" },
    { name = "Daniel Koceja" },
    { name = "Xinhao Li" },
    { name = "Federico Bianchi" },
]
keywords = ["reinforcement-learning", "llm", "test-time-training", "opentinker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]

dependencies = [
    "chz>=0.3",
    "ray[client]>=2.50",
    "torch>=2.6",
    "transformers>=4.56.2,<5.0",  # verl incompatible with transformers 5.x
    "numpy>=1.24",
    "submitit>=1.5",
    "hydra-core>=1.3",
    "wandb>=0.23",
    "tiktoken>=0.12",
    "safetensors>=0.4",
    "huggingface-hub>=0.36",
    "datasets>=2.14",
    "tqdm>=4.65",
    "cloudpickle>=3.0",
    "fsspec>=2024.1",
    "python-dotenv>=1.0",
    "termcolor>=3.3.0",
    "aiohttp>=3.9",
    "omegaconf>=2.3",
    "tensordict>=0.3",
]

[project.optional-dependencies]
math = [
    "cvxpy>=1.7.4",
    "scipy>=1.15.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ttt_discover*"]
